crates/wac-parser/tests/resolution/fail/export-invalid-name.wac
import f: func();
export f with "INVALID!";